# HodolBot

./: .env.example  .gitignore  Procfile  README.md  app.py  calc.py  covid19.py  gamble.py  index.py  main.py  pyproject.toml  ranking.py  requirements.txt  setup.py  stock.py
.circleci/: config.yml
.github/workflows/: python-app.yml
hodolbot/: __main__.py  app.py  bot.py  covid19.py  ranking.py  stock.py
hodolbot/classes/: __init__.py  model.py  view.py
hodolbot/constants/: __init__.py
hodolbot/controllers/: __init__.py  covid19.py  developer.py  ranking.py  stock.py
hodolbot/functions/: __init__.py  functions.py
hodolbot/models/: __init__.py  covid19.py  developer.py  ranking.py  stock.py
hodolbot/types/: __init__.py  covid19.py  ranking.py  stock.py
hodolbot/utils/: __init__.py  get_env.py
hodolbot/views/: __init__.py  covid19.py  developer.py  ranking.py  stock.py
json/: kosdaq.json  kospi.json
scripts/: run.ps1  run.sh
tests/: test_covid19.py  test_hodolbot.py  test_ranking.py  test_stock.py
